Change Log
==============
2023/10/11 (IBM_DB adapter 5.4.2, driver 3.1.0)
  - config.yml to have Environment variables to specify credentials.

2023/03/29 (IBM_DB adapter 5.4.1, driver 3.1.0)
  - Download clidriver issue fixed and replaced http links with https.

2023/01/06 (IBM_DB adapter 5.4.0, driver 3.1.0)
  - Support for Ruby 3.1 and Rails 7.0

2022/10/06 (IBM_DB adapter 5.3.2, driver 3.0.6)
  - Allowed all rails versions < 6.2 in gemspec, replaced limit clause with FETCH FIRST n ROWS

2022/09/21 (IBM_DB adapter 5.3.1, driver 3.0.6)
  - Yanked version 5.3.0 as package includes clidriver

2022/09/17 (IBM_DB adapter 5.3.0, driver 3.0.6)
  - Support for Ruby 3.0 and Rails 6.1

2018/05/24 (IBM_DB adapter 4.0.0, driver 3.0.5)
  - Rails 5.0.7 Toleration support. New features of Active Record 5.0.7 are not added also none of the open issue are fixed in this release.
  
2016/07/08 (IBM_DB adapter 3.0.5, driver 3.0.5)
  - Fixed issue #71 - Query hangs from db2 with no any exception return
  
2016/07/08 (IBM_DB adapter 3.0.4, driver 3.0.3)
  - Fixed issue #58 - non-string query parameters do not get prepared.
  
2016/06/17 (IBM_DB adapter 3.0.3, driver 3.0.3)
  - Fixed issue #59 - Can't Update Binary Files Using 3.0.x (with Ruby 2.1.0 and Rails 4.2.6) 
  
2016/05/24 (IBM_DB adapter 3.0.2, driver 3.0.2)
  - Fixed issue #52 - Invalid foreign key ON UPDATE action specified in schema.rb 
  - Fixed issue #59 - Can't Upload Binary Files Using 3.0.x (with Ruby 2.1.0 and Rails 4.2.6) 
  
2016/01/06 (IBM_DB adapter 3.0.1, driver 3.0.1)
  - Combined MacOS and Linux installation code in one file under extconf.rb to handle any Mac OS version upgrade.
  - Fixed bug#49 - Regardless of what value you pass in for a clob, update_attributes will set the value to <ibm>@@@IBMTEXT@@@</ibm> in the database
  
2015/09/30 (IBM_DB adapter 3.0.0, driver 3.0.0)
  - Added minimum dependency for Rails version 4.2.0 and for active record 4.2.0, as some Rails 4.2 APIs are not backward compatible.